# albars

./: .gitignore  bun.lockb  index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/alba-api/: Cargo.toml
src-tauri/crates/alba-api/src/: api.rs  bindings.rs  connect.rs  functions.rs  helpers.rs  instances.rs  lib.rs  safearray.rs
src-tauri/crates/alba_ffi/: Cargo.toml  build.rs
src-tauri/crates/alba_ffi/include/: ETABSv1.h  ETABSv1.tli  ffi.h
src-tauri/crates/alba_ffi/src/: ETABSv1.cc  api.rs  ffi.cc  helpers.rs  lib.rs
src-tauri/crates/alba_solver/: Cargo.toml
src-tauri/crates/alba_solver/src/: lib.rs  parametros.rs
src-tauri/src/: main.rs
src/components/: ButtonAwait.svelte  ConfigMenuPopover.svelte  Icon.svelte  ResponsiveStage.svelte  Scatter.svelte
src/lib/: CanvasDensidad.svelte  Footer.svelte  Greet.svelte  MenuBar.svelte  ParametrosIniciales.svelte
src/utils/: transitions.ts
