[package]
name = "alba-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
widestring = "1.0.2"
win-variant = "0.3.0"
winapi = { version = "0.3.9", features = ["combaseapi", "wtypesbase", "unknwnbase", "oleauto", "impl-default", "wtypes", "oaidl", "winerror", "objbase"] }
winreg = "0.52.0"
